Bug 408748 - [Application Dashboard] Applications are not always opened when clicked
Summary: [Application Dashboard] Applications are not always opened when clicked
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.16.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
: 409625 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-06-15 18:01 UTC by Luca Carlon
Modified: 2019-07-24 20:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.4
Sentry Crash Report:


Attachments
Application screenshot (3.27 MB, image/png)
2019-06-17 17:42 UTC, Luca Carlon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Carlon 2019-06-15 18:01:47 UTC
Since Plasma version 5.16 it is very difficult to open apps. It seems that clicking on the icons does not always result in the app being opened. I have to click multiple times, and even in that case, sometimes the application is not opened. The only reliable way to open is to hover on the application with the pointer and to press enter.


STEPS TO REPRODUCE
1. Click on an icon, once or multiple times.

OBSERVED RESULT
Application not always opened.

EXPECTED RESULT
Application used to open after the first click. Now it opens only sometimes. Other times, multiple clicks are needed. Other times, no way to open it. I need to press enter.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 19.04
KDE Plasma Version: 5.16.0
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.2

ADDITIONAL INFORMATION
Used to work in previous versions. I think I had 5.15.4 before.
Comment 1 Nate Graham 2019-06-16 22:37:25 UTC
In which tab? Favorites, history, Applications, or something else? Or all of them? Can you see any kind of pattern? Asking because I cannot reproduce.
Comment 2 Luca Carlon 2019-06-17 17:42:56 UTC
Created attachment 120953 [details]
Application screenshot
Comment 3 Luca Carlon 2019-06-17 17:53:09 UTC
I uploaded a shot of the application I'm talking about. Just to be sure I set the proper component in the report.
I see the problem everywhere there is a square with something to click on. Even a widget. So I could reproduce in the "Favorites" section, in the "Recent applications" section, "Recent documents" and all the others I tested (I can't find the "history" tab you referred to).
Unfortunately I cannot find a real deterministic pattern: may need 1 click, 2 clicks or more. Sometimes I simply gave up. But the "enter" key always works immediately.
I'm a dev, can I help somehow? Any log I can enable? Can I start that from the command line somehow? If you want me to add a log somewhere and test I can probably do it if you give me some hints.
Comment 4 Luca Carlon 2019-06-17 18:31:00 UTC
It seems I cannot reproduce on the buttons "Apps & Docs" and "Widgets".
Comment 5 Nate Graham 2019-06-17 19:13:16 UTC
Ah, Application Dashboard, not Kickoff. Still cannot reproduce unfortunately (fortunately?).

I would recommend doing a git bisect on the plasma-desktop repo, where this lives. Also take a look at applets/kicker/package/contents/ui/ItemGridDelegate.qml
Comment 6 Luca Carlon 2019-06-17 22:49:52 UTC
I'll try to bisect.
Did you try on a HiDPI screen by any chance?
Comment 7 Nate Graham 2019-06-18 10:54:21 UTC
No, regular DPI (1920x1080).
Comment 8 Luca Carlon 2019-06-22 01:06:22 UTC
I tried to simply disable nVidia and run on Intel HD only. No issue on Intel HD. The problem occurs only on nVidia.
Unfortunately I tried to create a VM to rebuild plasma and run a session there but... believe it or not, virtualbox freezes the system when on nVidia...
So, I don't exactly now how to help more on this.
Comment 9 Nate Graham 2019-06-22 09:11:59 UTC
Moving to KWin for comment. Possibly an upstream bug.

Are you using the proprietary drivers? Does it happen on Wayland too, or just on X11?
Comment 10 Luca Carlon 2019-06-22 09:16:08 UTC
Yes, proprietary drivers. I only use X11 as kwin with wayland on nVidia is not supported (probably added in 5.16 right?).
Comment 11 Nate Graham 2019-06-22 09:45:20 UTC
Right!
Comment 12 Luca Carlon 2019-06-22 12:07:45 UTC
Tried Plasma on Wayland with nVidia: I could reproduce immediately.
Comment 13 Vlad Zahorodnii 2019-06-24 12:11:15 UTC
If you run an application from the terminal, does it show up immediately?
Comment 14 Martin Flöser 2019-06-24 13:37:36 UTC
I don't understand why this was moved to KWin. It's clearly not a bug in the window manager as it's not involved with input handling on X11.
Comment 15 Luca Carlon 2019-06-24 17:57:37 UTC
@Vlad yes, starting apps from command line works properly. The only thing not working properly is the "click event" in that view.
Comment 16 Luca Carlon 2019-07-05 18:23:52 UTC
Someone who can suggest a way to debug this? I was able to build everything and log into a dev version of Plasma. I suppose it is difficult to use gdb in there. Can I read logs somehow from that QML file or from the component?
Comment 17 Luca Carlon 2019-07-07 13:09:51 UTC
It seems that the issue appeared in 0ecb135. This is my attempt to fix the issue: https://phabricator.kde.org/D22306. It seems to work so far in my environment: applications are properly opened when clicked, moving an icon to the favorite list does not close the dashboard and also clicking outside results in closing the dashboard.
Unfortunately, the rationale behind that commit is not completely clear to me. In particular, this line https://phabricator.kde.org/source/plasma-desktop/browse/master/applets/kicker/package/contents/ui/ItemGridView.qml$433 is not completely clear to me.
It seems my env has something peculiar, as no one else could reproduce. Maybe there is someone who can review my patch and let me know if it works? Thanks.
Comment 18 Nate Graham 2019-07-15 21:24:14 UTC
*** Bug 409625 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2019-07-24 19:51:26 UTC
Git commit fba194e562730e4b038a231330b9d45c331f8535 by Nate Graham, on behalf of Luca Carlon.
Committed on 24/07/2019 at 19:50.
Pushed by ngraham into branch 'Plasma/5.16'.

Do not skip code launching application in application dashboard

Summary:
Since Plasma 5.16, clicks over the icons are frequently ignored. See https://bugs.kde.org/show_bug.cgi?id=408748 for more info. This patch is an attempt to fix that seems to work for me.

Reviewers: ngraham, trmdi, #plasma, hein

Reviewed By: ngraham, #plasma, hein

Subscribers: hein, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22306

M  +8    -10   applets/kicker/package/contents/ui/ItemGridView.qml
M  +17   -1    applets/kicker/plugin/draghelper.cpp
M  +6    -1    applets/kicker/plugin/draghelper.h

https://commits.kde.org/plasma-desktop/fba194e562730e4b038a231330b9d45c331f8535