Do not skip code launching application in application dashboard

Summary:
Since Plasma 5.16, clicks over the icons are frequently ignored. See https://bugs.kde.org/show_bug.cgi?id=408748 for more info. This patch is an attempt to fix that seems to work for me.

BUG: 408748

Reviewers: ngraham, trmdi, #plasma, hein

Reviewed By: ngraham, #plasma, hein

Subscribers: hein, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22306