applets/kicker/plugin/draghelper.h
@@ -30,6 +30,7 @@ class DragHelper : public QObject
 {
     Q_OBJECT
     Q_PROPERTY(int dragIconSize READ dragIconSize WRITE setDragIconSize NOTIFY dragIconSizeChanged)
+    Q_PROPERTY(bool dragging READ isDragging NOTIFY draggingChanged)
 
     public:
         explicit DragHelper(QObject *parent = nullptr);
@@ -37,6 +38,7 @@ class DragHelper : public QObject
 
         int dragIconSize() const;
         void setDragIconSize(int size);
+        bool isDragging() const { return m_dragging; }
 
         Q_INVOKABLE bool isDrag(int oldX, int oldY, int newX, int newY) const;
         Q_INVOKABLE void startDrag(QQuickItem* item, const QUrl &url = QUrl(), const QIcon &icon = QIcon(),
@@ -45,11 +47,14 @@ class DragHelper : public QObject
     Q_SIGNALS:
         void dragIconSizeChanged() const;
         void dropped() const;
+        void draggingChanged() const;
 
     private:
         int m_dragIconSize;
+        bool m_dragging;
         Q_INVOKABLE void doDrag(QQuickItem* item, const QUrl &url = QUrl(), const QIcon &icon = QIcon(),
-            const QString &extraMimeType = QString(), const QString &extraMimeData = QString()) const;
+            const QString &extraMimeType = QString(), const QString &extraMimeData = QString());
+        void setDragging(bool dragging);
 };
 
 #endif
